--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@vueuse/core": "^11.1.0",
     "element-plus": "^2.8.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
