--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^11.1.0",
-    "element-plus": "^2.8.7",
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^13.1.0",
+    "element-plus": "^2.9.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -30,11 +30,15 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
-    "miragejs": "^0.2.0-alpha.3",
+    "miragejs": "^0.1.47",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^5.3.1",
+    "vite-plugin-compression2": "^1.3.3",
     "vue-tsc": "^2.0.21"
   }
 }
